src/objects/Treatment_Plan__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Treatment Plans</relationshipLabel>
        <relationshipName>Treatment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Bleaching_Tray__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bleaching Tray</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bone_Grafting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bone Grafting</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ClearChoice_Doctor__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ClearChoice Doctor</label>
        <referenceTo>ClearChoice_Doctor__c</referenceTo>
        <relationshipLabel>Treatment Plans</relationshipLabel>
        <relationshipName>Treatment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consult_Treatment_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consult Treatment Plan</label>
        <referenceTo>Treatment_Plan__c</referenceTo>
        <relationshipLabel>Treatment Plans</relationshipLabel>
        <relationshipName>Treatment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Cost__c</fullName>
        <label>Future Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Handout_Notes__c</fullName>
        <label>Handout Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Immediate_Load__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Immediate Load</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Include_on_Handout__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Include on Handout</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Initial_Cost__c</fullName>
        <label>Initial Cost</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nightguard__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Nightguard</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Treatment Plans</relationshipLabel>
        <relationshipName>Treatment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Recommended__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recommended</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Timeline__c</fullName>
        <label>Timeline</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Cost__c</fullName>
        <formula>Initial_Cost__c + Final_Cost__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Treatment_Option__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Treatment Option</label>
        <referenceTo>Treatment_Option__c</referenceTo>
        <relationshipLabel>Treatment Plans</relationshipLabel>
        <relationshipName>Treatment_Plans</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Treatment Plan</label>
    <listViews>
        <fullName>All_with_date</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Treatment_Option__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>greaterThan</operation>
            <value>8/1/2016 12:00 AM</value>
        </filters>
        <label>All with date</label>
    </listViews>
    <nameField>
        <displayFormat>TP-{0000}</displayFormat>
        <label>Treatment Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Treatment Plans</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>